discussion/kv_engine/139739/139739_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP CBSS-591: Switch magma memory accounting to use memory guards

Change-Id: Ia22d206bc461ec45aab08335a85bdaf208358e71

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2020-11-12 21:51:18.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-11-13 01:16:57.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31721/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31721/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27388/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:480:32:
error: no member named "ArenaClient" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27388/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5592/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:480:32: error: no member named "ArenaClient" in "magma::Magma::Config" [clang-diagnostic-error]
        configuration.magmaCfg.ArenaClient =
                               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5592/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:480:32:
error: no member named "ArenaClient" in "magma::Magma::Config" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5592/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6059/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7319/ : FAILURE

Compile error at [2020-11-12T22:09:08.019Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:480:32:
error: no member named "ArenaClient" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7319/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14911/ : FAILURE

Compile error at [2020-11-12T22:06:02.292Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:480:32:
error: no member named "ArenaClient" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14911/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7108/ : FAILURE

Compile error at [2020-11-12T22:10:52.989Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:480:32:
error: ?struct magma::Magma::Config? has no member named ?ArenaClient?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7108/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4124/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6989/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Scott Lashley
Date: 2020-11-13 07:13:24.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
Author: Scott Lashley
Date: 2020-11-16 17:53:44.000000000
Message: 
Restored
----------------------------------------------------------------------------------------------------------------------
Author: Scott Lashley
Date: 2020-11-17 17:13:51.000000000
Message: 
Patch Set 3:

This is the final checkin to complete the magma memory tracking change.
I need to add in an MB to track this.
----------------------------------------------------------------------------------------------------------------------
